<resources>
    <string name="app_name">App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="khemin_nanodegree_apps">Khemin\'s Nanodegree Apps !</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="toast_base">This will open the app:</string>
</resources>
