<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/khemin_nanodegree_apps"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_large_material"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">


            <Button
                android:id="@+id/button_spotify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>

            <Button
                android:id="@+id/button_scores"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>


            <Button
                android:id="@+id/button_library"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>


            <Button
                android:id="@+id/button_build_it_bigger"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>


            <Button
                android:id="@+id/button_xyz_reader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>


            <Button
                android:id="@+id/button_capstone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:textColor="@color/primary_text_default_material_dark"
                android:backgroundTint="@color/button_material_dark"
                android:layout_marginBottom="@dimen/button_margin_bottom"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
